--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
 /*  your css code here. If applicable */
+.nav-bar{
+	background-color: #D3D3D3;
+	padding: 10px;
+	
+}
+
+li{
+	display:inline;
+	margin-right : 1rem;
+	list-style : none;
+}
